-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.3.0-rc
-
Windows XP SP3
SDKTestRound19
QtCreator 2.2.85
-
059e5f30deacdec5ad9449c6247b609be5cf9727
Steps:
1. Create a QtQuick Application using the wizard and select the Symbian Device as the target
2. Select the Qt 4.7.3 for Symbian~3(Qt SDK) Release and the build tool
3. Select the Tool chain: GCCE from Qt version
------------------------------------------------------------------------------
Compiler path:C:\QtSDK\Symbian\tools\gcce4\bin\arm-none-symbianelf-gcc.exe
ABI: arm-symbian-device-elf-32bit
Debugger: C:\QtSDK\pythongdb\python_2.7based\gdb-i686-pc-mingw32.exe
------------------------------------------------------------------------------
4. Start the building
Expected result:
Building pass
Actual result:
Building failed
Comment:
SDKTestRound19
---------------------------------------------------------------------------------------------------------
sbs: build log in C:\QtSDK\Symbian\SDKs\Symbian3Qt473\epoc32\build\Makefile.2011-08-24-16-43-02.31-19516.log
C:\QtSDK\Symbian\SDKs\Symbian3Qt473\epoc32\tools\make.exe: Leaving directory `D:/My/myQtProject/caseRound19'
FAILED compile for arm.v5.urel.gcce4_4_1: moc\moc_qmlapplicationviewer.cpp
mmp: caseRound19_exe.mmp
FAILED compile for arm.v5.urel.gcce4_4_1: qmlapplicationviewer\qmlapplicationviewer.cpp
mmp: caseRound19_exe.mmp
FAILED compile for arm.v5.urel.gcce4_4_1: main.cpp
mmp: caseRound19_exe.mmp
mingw32-make[1]: ***
[C:/QtSDK/Symbian/SDKs/Symbian3Qt473/epoc32/build/caseround19/c_02853aad75ac969f/caseRound19_exe/armv5/urel/moc_qmlapplicationviewer.o]
Error 1
mingw32-make[1]: *** Waiting for unfinished jobs....
mingw32-make[1]: ***
[C:/QtSDK/Symbian/SDKs/Symbian3Qt473/epoc32/build/caseround19/c_02853aad75ac969f/caseRound19_exe/armv5/urel/qmlapplicationviewer.o] Error
1
mingw32-make[1]: *** [C:/QtSDK/Symbian/SDKs/Symbian3Qt473/epoc32/build/caseround19/c_02853aad75ac969f/caseRound19_exe/armv5/urel/main.o]
Error 1
sbs: error: The make-engine exited with errors.
C:\QtSDK\Symbian\SDKs\Symbian3Qt473\epoc32\tools\make.exe: *** [release-gcce] Error 1
The process "C:\QtSDK\Symbian\SDKs\Symbian3Qt473\epoc32\tools\make.exe" exited with code 2.
Error while building project caseRound19 (target: Symbian Device)
When executing build step 'Make'
-----------------------------------------------------------------------------------------------------------------