Symbian: Warn if EPOCROOT is on different drive from the sources

... even when using SBSv2

Task-Number: QTCREATORBUG-5907
Change-Id: Ibb79dc798b8146f9e5658e186f499bfd47fb3d9e
Reviewed-on: http://codereview.qt.nokia.com/3660
Reviewed-by: Tobias Hunger <tobias.hunger@nokia.com>
(cherry picked from commit 059e5f30deacdec5ad9449c6247b609be5cf9727)